--- a/scss/style.scss
+++ b/scss/style.scss
@@ -1,24 +1,50 @@
+@import url('https://fonts.googleapis.com/css?family=Montserrat:400,700&display=swap');
+
 * {
     box-sizing: border-box;
   }
   
+  html,
+  body {
+    height: 100%;
+  }
+
   body
   {
-    margin: .5rem 2rem;
+    display: flex;
+    flex-direction: column;
     font-family: "Montserrat", sans-serif;
+    margin: 0;
   }
   
   header {
-    display: flex;  
+    display: flex;
+    flex-direction: column;
+    align-items: center;
     justify-content: space-between;
+    position: fixed;
+    width: 100%;
+    top: 0;
+    left: 0;
+    padding: 0 1rem;
+    font-weight: bold;
+    border-bottom: 1px solid black;
     
+    .name {
+      margin-top: 0;
+      margin-bottom: .85em;
+      font-size: 1.5rem;
+    }
+
     ul {
       display: flex;
+      flex-direction: column;
+      align-items: center;
       margin: 0;
+      padding:0;
       list-style: none;
       
       li {
-        margin-left: 2rem;
         
         a {
           color: inherit;
@@ -26,4 +52,63 @@
         }
       }
     }
+  }
+
+  main {    
+    margin-top: 3.5rem;  
+  }
+
+  footer {
+    margin-top: auto;
+    background: black;
+    padding: 2rem;
+    color: white;
+    text-align: center;
+
+    a {
+      color: inherit;
+      text-decoration: none;
+    }
+  }
+
+  // Extra Small
+  @media (min-width: 375px) {
+    header {
+
+      ul {
+        flex-direction: row;
+
+        li {
+          margin-left: 2rem;
+    
+          &:first-of-type { 
+            margin-left: 0;
+          }
+        }      
+      }
+    }
+  }
+
+  // Small
+  @media (min-width: 576px) {
+  }    
+
+  // Medium
+  @media (min-width: 768px) {
+    header {
+      flex-direction: row;
+
+      .name {
+        margin-top: .85em;
+      }
+    }
+    
+  }
+
+  // Large
+  @media (min-width: 992px) {
+  }
+
+  // Extra Large
+  @media (min-width: 1200px) {    
   }
