--- a/scss/style.scss
+++ b/scss/style.scss
@@ -20,32 +20,50 @@
   header {
     display: flex;
     flex-direction: column;
-    align-items: center;
     justify-content: space-between;
     position: fixed;
     width: 100%;
     top: 0;
     left: 0;
-    padding: 0 1rem;
     font-weight: bold;
-    border-bottom: 1px solid black;
+    color: #ddd;
+    border-bottom: 2px solid black;
+    background: #222;
     
     .name {
-      margin-top: 0;
-      margin-bottom: .85em;
+      margin: 0;
+      padding: .25em 0 .25rem .5rem;   
       font-size: 1.5rem;
     }
 
+    .collapse {
+      position: absolute;
+      right: 1rem;
+      top: 3px;
+      margin-left: 0;
+      font-size: 1.75rem;
+    }   
+
     ul {
-      display: flex;
+      display: none;
       flex-direction: column;
       align-items: center;
       margin: 0;
       padding:0;
       list-style: none;
+      background: #222;
+      color: #ddd;
+      border-top: 2px solid black;
       
       li {
-        
+        width: 100%;
+        padding: .5rem;
+        border-top: 1px solid #ccc;       
+
+        &:first-of-type {
+          border-top: 0;
+        }        
+
         a {
           color: inherit;
           text-decoration: none;
@@ -55,7 +73,39 @@
   }
 
   main {    
-    margin-top: 3.5rem;  
+    margin-top: 38px;
+
+    section {
+      padding: 1rem;
+      
+
+      &.splash {
+        min-height: calc(100vh - 38px);
+        padding-top: 7rem;
+        background: bottom / cover url("../images/stars.png");
+        text-align: center;
+        color: white;
+
+        blockquote {
+          font-size: 2rem;
+          font-weight: 400;          
+          text-shadow: 8px 8px 14px #0c0743;
+        }
+
+        cite {
+          font-size: 1rem;  
+
+          a {
+            text-decoration: none;
+            color: inherit;
+          }
+        }
+      }
+    }    
+
+    #about {      
+      min-height: 40vh;   
+    }
   }
 
   footer {
@@ -74,18 +124,32 @@
   // Extra Small
   @media (min-width: 375px) {
     header {
+      align-items: center;     
+      
+      .collapse {
+        display: none;
+      }      
 
       ul {
+        display: flex;      
         flex-direction: row;
+        background: none;
+        color: inherit;
+        border-top: 0;
 
         li {
           margin-left: 2rem;
+          border: 0;
     
           &:first-of-type { 
             margin-left: 0;
           }
         }      
       }
+    }
+
+    main {
+      margin-top: 76px;     
     }
   }
 
@@ -96,17 +160,30 @@
   // Medium
   @media (min-width: 768px) {
     header {
+      padding: 0 1.5rem;
       flex-direction: row;
 
       .name {
-        margin-top: .85em;
+        margin: .85em 0;
+      }
+    } 
+
+    main {  
+
+      section {
+        
+        &.splash {
+          h1 {
+            font-size: 4rem;
+          }
+        }
       }
     }
-    
   }
 
   // Large
   @media (min-width: 992px) {
+    
   }
 
   // Extra Large
