--- a/scss/style.scss
+++ b/scss/style.scss
@@ -1,191 +1,388 @@
-@import url('https://fonts.googleapis.com/css?family=Montserrat:400,700&display=swap');
+@import url("https://fonts.googleapis.com/css?family=Montserrat:400,700&display=swap");
 
 * {
-    box-sizing: border-box;
-  }
-  
-  html,
-  body {
-    height: 100%;
+  box-sizing: border-box;
+}
+
+html,
+body {
+  height: 100%;
+}
+
+body {
+  display: flex;
+  flex-direction: column;
+  font-family: "Montserrat", sans-serif;
+  margin: 0;
+}
+
+header {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  position: fixed;
+  width: 100%;
+  top: 0;
+  left: 0;
+  font-weight: bold;
+  color: #ddd;
+
+  .name {
+    margin: 0;
+    padding: 0.25em 0 0.25rem 0.5rem;
+    font-size: 1.5rem;
+    font-weight: 400;
+    background: #222;
   }
 
-  body
-  {
-    display: flex;
-    flex-direction: column;
-    font-family: "Montserrat", sans-serif;
-    margin: 0;
+  .collapse {
+    position: absolute;
+    right: 1rem;
+    top: 3px;
+    margin-left: 0;
+    font-size: 1.75rem; 
   }
-  
-  header {
-    display: flex;
+
+  ul {
+    height: 96vh;
+    display: none;
     flex-direction: column;
-    justify-content: space-between;
-    position: fixed;
-    width: 100%;
-    top: 0;
-    left: 0;
-    font-weight: bold;
-    color: #ddd;
-    border-bottom: 2px solid black;
+    align-items: center;
+    justify-content: center;
+    margin: 0;
+    margin-left: auto;
+    padding: 0;
+    list-style: none;
     background: #222;
+    color: #ddd;
+    font-weight: 400;
+    border-top: 2px solid black;
+    border-bottom: 2px solid black;
     
-    .name {
-      margin: 0;
-      padding: .25em 0 .25rem .5rem;   
+
+    li {
+      text-align: center;
+      width: 100%;
+      padding: 1rem 0.5rem;
       font-size: 1.5rem;
+      font-weight: 300;
+
+      a {
+        color: inherit;
+        text-decoration: none;
+
+        &:hover {
+          border-bottom: 1px solid white;
+          text-shadow: 8px 8px 14px #ccc;
+        }
+      }
+    }
+  }
+}
+
+main {
+  margin-top: 38px;
+}
+
+section {
+
+  padding: 0;
+  margin: 0 auto;
+
+  h1, h2, h3 {
+    font-weight: 500;
+  }  
+
+  h1 {
+    background: #333;
+    color: white;
+    padding: .25rem .5rem;
+    max-width: 1200px;
+    margin: 0 auto;
+    margin-bottom: 1rem;
+  }
+  h2 {
+    font-size: 1.1rem;
+  }
+
+  .container {
+    max-width: 1200px;
+    padding: 0 .5rem;
+    margin: 0 auto;
+  }
+
+  &.splash {
+    min-height: calc(100vh - 38px);
+    max-width: inherit;
+    padding-top: 7rem;
+    background: bottom / cover url("../images/stars.png");
+    text-align: center;
+    color: white;
+
+    blockquote {
+      margin-left: 0;
+      margin-right: 0;
+      font-size: 2rem;
+      font-weight: 400;
+      text-shadow: 8px 8px 14px #0c0743;
     }
 
-    .collapse {
-      position: absolute;
-      right: 1rem;
-      top: 3px;
-      margin-left: 0;
-      font-size: 1.75rem;
-    }   
+    cite {
+      font-size: 1rem;
 
-    ul {
-      display: none;
+      a {
+        text-decoration: none;
+        color: inherit;
+      }
+    }
+  }
+
+  &#about {
+    background: url("../images/egg_shell.png");
+    text-align: center;
+
+    h1 {
+      margin-bottom: 0;
+    }
+
+    .container  {
+      background: #ccc;
+      border-radius: 5px;
+    }
+
+    .intro {
+      margin-top: 0;
+      
+      font-size: 1.2rem;
+      font-weight: 300;
+    }
+
+    .intro-container {
+      display: flex;
       flex-direction: column;
       align-items: center;
-      margin: 0;
-      padding:0;
-      list-style: none;
-      background: #222;
-      color: #ddd;
-      border-top: 2px solid black;
-      
-      li {
-        width: 100%;
-        padding: .5rem;
-        border-top: 1px solid #ccc;       
+      justify-content: center;
+      padding: 2rem;
 
-        &:first-of-type {
-          border-top: 0;
-        }        
+      p {
+      }
+
+      .brand-container {
+        display: flex;
+        flex-direction: column;
+      
+        .headshot {
+          border: 2px solid #222;
+          border-radius: 5px;
+          vertical-align: middle;
+        }
+      }
+    }
+
+    .social-links {
+      display: flex;
+      justify-content: space-around;
+      width: 100%;
+      margin: 0;
+      margin-top: .25rem;
+      padding-left: 0;
+      font-size: 1.5rem;
+      list-style: none;
+
+      i {
+        color: #333;;
+      }
+    }    
+  }
+
+  &#work {
+    .lists {
+      display: flex;
+      flex-wrap: wrap;
+      justify-content: space-between;
+
+      div {
+        flex: 0 30rem;
+      }
+    }
+
+    ul {
+      padding-left: .5rem;
+      list-style: none;      
+
+      li {
+        padding: .25rem 0;
 
         a {
           color: inherit;
           text-decoration: none;
-        }
-      }
-    }
-  }
 
-  main {    
-    margin-top: 38px;
-
-    section {
-      padding: 1rem;
-      
-
-      &.splash {
-        min-height: calc(100vh - 38px);
-        padding-top: 7rem;
-        background: bottom / cover url("../images/stars.png");
-        text-align: center;
-        color: white;
-
-        blockquote {
-          font-size: 2rem;
-          font-weight: 400;          
-          text-shadow: 8px 8px 14px #0c0743;
-        }
-
-        cite {
-          font-size: 1rem;  
-
-          a {
-            text-decoration: none;
-            color: inherit;
+          i {
+            font-size: .7rem;
+            color: blue;
           }
         }
       }
-    }    
-
-    #about {      
-      min-height: 40vh;   
     }
   }
+}
 
-  footer {
-    margin-top: auto;
-    background: black;
-    padding: 2rem;
-    color: white;
-    text-align: center;
+footer {
+  margin-top: auto;
+  background: black;
+  padding: 2rem;
+  color: white;
+  text-align: center;
 
-    a {
-      color: inherit;
-      text-decoration: none;
-    }
+  a {
+    color: inherit;
+    text-decoration: none;
   }
+}
 
-  // Extra Small
-  @media (min-width: 375px) {
-    header {
-      align-items: center;     
-      
-      .collapse {
-        display: none;
-      }      
+.show-med {
+  display: none;
+}
 
-      ul {
-        display: flex;      
-        flex-direction: row;
-        background: none;
-        color: inherit;
-        border-top: 0;
+// Extra Small
+@media (min-width: 375px) {
+  section {
+    &.splash {
+      blockquote {
+      }
 
-        li {
-          margin-left: 2rem;
-          border: 0;
-    
-          &:first-of-type { 
-            margin-left: 0;
-          }
-        }      
+      cite {
       }
     }
-
-    main {
-      margin-top: 76px;     
-    }
   }
+}
 
-  // Small
-  @media (min-width: 576px) {
-  }    
+// Small
+@media (min-width: 576px) {
+  header {
+    align-items: center;
+    background: #222;
 
-  // Medium
-  @media (min-width: 768px) {
-    header {
-      padding: 0 1.5rem;
+    .collapse {
+      display: none;
+    }
+
+    ul {
+      height: inherit;
+      display: flex;
       flex-direction: row;
+      margin-left: 0;
+      background: none;
+      color: inherit;
+      border: 0;
 
-      .name {
-        margin: .85em 0;
-      }
-    } 
+      li {
+        margin-left: 2rem;
+        border: 0;
 
-    main {  
-
-      section {
-        
-        &.splash {
-          h1 {
-            font-size: 4rem;
-          }
+        &:first-of-type {
+          margin-left: 0;
         }
       }
     }
   }
 
-  // Large
-  @media (min-width: 992px) {
-    
+  main {
+    margin-top: 74px;
   }
 
-  // Extra Large
-  @media (min-width: 1200px) {    
+  section {
+    &.splash {
+      blockquote {
+        font-size: 3rem;
+      }
+
+      cite {
+        font-size: 1.25rem;
+      }
+    }
+
+    &#about {
+      text-align: left;
+
+      .intro-container {
+
+        flex-direction: row;
+
+        p {
+          max-width: 90%;
+
+        }
+
+        .intro {
+          order: 1;
+        }
+
+        .brand-container {
+          order: 2;
+        }
+      }
+      .social-links {
+      
+      }
+    }
+    &#work {
+      ul {
+        padding-left: 1.5rem;
+        list-style: none;
+      }
+    }
   }
+}
+
+// Medium
+@media (min-width: 768px) {
+  header {
+    padding: 0 1.5rem;
+    flex-direction: row;
+
+    .name {
+      margin: 0.85em 0;
+    }
+  }
+
+  .hide-med {
+    display: none;
+  }
+
+  .show-med {
+    display: inherit;
+  }
+
+  section {
+    &.splash {
+      blockquote {
+        font-size: 3.5rem;
+      }
+
+      cite {
+      }
+    }
+
+    &#about {
+      .intro-container {
+
+        p {
+        }
+      }
+      .social-links {
+      }
+    }
+  }
+}
+
+// Large
+@media (min-width: 992px) {
+}
+
+// Extra Large
+@media (min-width: 1200px) {
+  section {    
+    padding: 2rem 0;
+  }
+}
